# treehut-scrollmark-analysis

./: .gitignore  EXTENSION_PROPOSAL.md  Readme.md  dashboard.html
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py  main.py.bak  main.py.bak2  main.py.bak3  main.py.bak4
backend/instagram_analysis/: __init__.py  eda_report_generator.py  engagement_eda.py  engagement_enrichment  enrichment_pipeline.py  enrichment_pipeline_parallel.py  enrichment_report_generator.py  main.py  trend_analysis.py  universal_pipeline.py
backend/reports/: eda_report.md  enriched_instagram_data.sqlite  enrichment_report.md  trend_analysis_report.md
backend/src/: models.py
reports/: EXECUTIVE_SUMMARY.md  enrichment_summary.json
scripts/: run_pipeline.sh  run_server.sh
templates/: dashboard.html
