[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-scrollmark-analysis"
version = "0.1.0"
description = "Instagram scrollmark analysis proof of concept"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "emoji>=2.14.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "vadersentiment>=3.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["instagram_analysis"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/instagram-scrollmark-analysis"
Repository = "https://github.com/yourusername/instagram-scrollmark-analysis.git"

[project.scripts]
instagram-analysis = "instagram_analysis.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 
